skins/larry/mail.css
/**
 * Roundcube webmail styles for the Email section
 *
 * Copyright (c) 2012, The Roundcube Dev Team
 * Screendesign by FLINT / Büro für Gestaltung, bueroflint.com
 *
 * The contents are subject to the Creative Commons Attribution-ShareAlike
 * License. It is allowed to copy, distribute, transmit and to adapt the work
 * by keeping credits to the original autors in the README file.
 * See http://creativecommons.org/licenses/by-sa/3.0/ for details.
 */

#mailview-left {
	position: absolute;
	top: 0;
	left: 0;
	width: 220px;
	bottom: 0;
	z-index: 2;
}

#mailview-right {
	position: absolute;
	top: 0;
	left: 232px;
	right: 0;
	bottom: 0;
	z-index: 3;
}

#mailview-right.fullwidth {
	left: 0;
}

#mailview-top {
	position: absolute;
	top: 42px;
	left: 0;
	right: 0;
	bottom: 0px;
}

#mailview-bottom {
	display: none;
	position: absolute;
	left: 0;
	bottom: 0;
	right: 0;
	height: 0;
	border-radius: 4px;
	border-top: none;
}

#composeview-right #mailview-bottom {
	border-radius: 0 0 4px 4px;
}

#mailboxcontainer,
#messagelistcontainer {
	position: absolute;
	top: 42px;
	left: 0;
	width: 100%;
	bottom: 0;
}

#messagelistcontainer {
	top: 0;
	bottom: 30px;
	overflow: auto;
}

/* Real browsers accept this (not IE) */
html>/**/body #messagelist {
	overflow: auto;
	overflow-x: hidden;
}

#messagelistfooter {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	height: 22px;
	padding: 4px 6px;
	border-top: 1px solid #ddd;
	background: #ebebeb;
	background: -moz-linear-gradient(top, #ebebeb 0%, #c6c6c6 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(100%,#c6c6c6));
	background: -o-linear-gradient(top, #ebebeb 0%, #c6c6c6 100%);
	background: -ms-linear-gradient(top, #ebebeb 0%, #c6c6c6 100%);
	background: linear-gradient(top, #ebebeb 0%, #c6c6c6 100%);
	border-radius: 0 0 4px 4px;
}

#messagelistfooter.rightalign {
	text-align: right;
}

#messagelistfooter #countcontrols {
	display: inline-block;
}

#messagelistfooter #listcontrols,
#messagelistfooter #listselectors {
	display: inline-block;
	margin-right: 2em;
	vertical-align: middle;
}

#messagelistfooter #listselectors .menuselector {
	margin-top: -2px;
}

a.iconbutton.listmode {
	width: 26px;
	height: 20px;
	background-position: 0 -477px;
}

a.iconbutton.threadmode {
	width: 26px;
	height: 20px;
	background-position: 0 -497px;
}

a.iconbutton.listmode.selected {
	background-position: -26px -477px;
}

a.iconbutton.threadmode.selected {
	background-position: -26px -497px;
}

#mailboxlist li.mailbox {
	position: relative;
	background-repeat: no-repeat;
	background-position: 6px 2px;
}

#mailboxlist > li:first-child {
	border-radius: 4px 4px 0 0;
	border-top: 0;
}

#mailboxlist li.mailbox a {
	padding-left: 36px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	background-image: url(images/listicons.png);
	background-repeat: no-repeat;
	background-position: 6px 3px;
}

#mailboxlist li.mailbox.unread > a {
	padding-right: 36px;
}

#mailboxlist li.mailbox.selected > a {
	background-position: 6px -21px;
}

#mailboxlist li.mailbox.inbox > a {
	background-position: 6px -189px;
}

#mailboxlist li.mailbox.inbox.selected > a {
	background-position: 6px -213px;
}

#mailboxlist li.mailbox.drafts > a {
	background-position: 6px -238px;
}

#mailboxlist li.mailbox.drafts.selected > a {
	background-position: 6px -262px;
}

#mailboxlist li.mailbox.sent > a {
	background-position: 6px -286px;
}

#mailboxlist li.mailbox.sent.selected > a {
	background-position: 6px -310px;
}

#mailboxlist li.mailbox.junk > a {
	background-position: 6px -334px;
}

#mailboxlist li.mailbox.junk.selected > a {
	background-position: 6px -358px;
}

#mailboxlist li.mailbox.trash > a {
	background-position: 6px -382px;
}

#mailboxlist li.mailbox.trash.selected > a {
	background-position: 6px -406px;
}

#mailboxlist li.mailbox.trash.empty > a {
	background-position: 6px -1924px;
}

#mailboxlist li.mailbox.trash.empty.selected > a {
	background-position: 6px -1948px;
}

#mailboxlist li.mailbox.archive > a {
	background-position: 6px -1699px;
}

#mailboxlist li.mailbox.archive.selected > a {
	background-position: 6px -1723px;
}

#mailboxlist li.mailbox ul li.drafts > a {
	background-position: 23px -238px;
}

#mailboxlist li.mailbox ul li.drafts.selected > a {
	background-position: 23px -262px;
}

#mailboxlist li.mailbox ul li.sent > a {
	background-position: 23px -286px;
}

#mailboxlist li.mailbox ul li.sent.selected > a {
	background-position: 23px -310px;
}

#mailboxlist li.mailbox ul li.junk > a {
	background-position: 23px -334px;
}

#mailboxlist li.mailbox ul li.junk.selected > a {
	background-position: 23px -358px;
}

#mailboxlist li.mailbox ul li.trash > a {
	background-position: 23px -382px;
}

#mailboxlist li.mailbox ul li.trash.selected > a {
	background-position: 23px -406px;
}

#mailboxlist li.mailbox ul li.trash.empty > a {
	background-position: 23px -1924px;
}

#mailboxlist li.mailbox ul li.trash.empty.selected > a {
	background-position: 23px -1948px;
}

#mailboxlist li.mailbox ul li.archive > a {
	background-position: 23px -1699px;
}

#mailboxlist li.mailbox ul li.archive.selected > a {
	background-position: 23px -1723px;
}

#mailboxlist li.unread {
	font-weight: bold;
}

#mailboxlist li.virtual > a {
	color: #aaa;
}

#mailboxlist li.recent > a {
	color: #017cb4;
}

#mailboxlist li.mailbox div.treetoggle {
	top: 13px;
	left: 19px;
}

#mailboxlist li.mailbox ul li:last-child {
	border-bottom: 0;
}

/* nested mailboxes */

#mailboxlist li.mailbox ul {
	list-style: none;
	margin: 0;
	padding: 0;
	border-top: 1px solid #bbd3da;
}

#mailboxlist li.mailbox ul li a {
	padding-left: 52px;  /* 36 + 1 x 16 */
	background-position: 22px -93px;  /* 6 + 1 x 16 */
}
#mailboxlist li.mailbox ul li.selected > a {
	background-position: 22px -117px;
}
#mailboxlist li.mailbox ul li div.treetoggle {
	left: 33px;
	top: 14px;
}
/* ... */

